--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,35 @@
 @use "./base.scss";
 
-// put your custom CSS here!
+.graph {
+  & > .graph-outer {
+    height: 400px;
+
+
+    & > .graph-container {
+      width: 100%;
+      height: 100%;
+
+      & > canvas {
+        width: 100% !important;
+        height: 100% !important;
+      }
+    }
+  }
+
+
+  & > .global-graph-outer > .global-graph-container {
+    height: 85vh;
+    width: 85vw;
+
+
+    & > .global-graph-container {
+      width: 100%;
+      height: 100%;
+
+      & > canvas {
+        width: 100% !important;
+        height: 100% !important;
+      }
+    }
+  }
+}
